--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   run:
-    runs-on: Mac OS
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python
