--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -26,5 +26,4 @@ jobs:
       run: |
         python findCheapMacbook.py
       env:
-        GIT_TOKEN: ${{ secrets.GithubToken }}
-      
+        GIT_TOKEN: ${{ secrets.GithubToken }
